<?xml version="1.0"?>
<package format="2">
  <name>dynamic_reconfigure_file_storage</name>
  <version>0.1.0</version>
  <description>
    The file storage backends stores the dynamic reconfigure parameters in the filesystem.
  </description>
  <author email="patrick@dfautomation.com">Patrick Chin</author>
  <maintainer email="patrick@dfautomation.com">Patrick Chin</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/dfautomation/dynamic_reconfigure_storage</url>
  <url type="bugtracker">https://github.com/dfautomation/dynamic_reconfigure_storage/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>dynamic_reconfigure_storage_utils</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  
  <exec_depend>rospy</exec_depend>

  <test_depend>roslint</test_depend>

  <export>
    <dynamic_reconfigure plugin="${prefix}/plugin.xml" />
    <dynamic_reconfigure plugin_py="dynamic_reconfigure_file_storage.FileStorage" />
  </export>
</package>
