<?xml version="1.0"?>
<package format="3">
  <name>dynamic_reconfigure_mysql_storage</name>
  <version>0.1.4</version>
  <description>
    The MySQL storage backends stores the dynamic reconfigure parameters in a MySQL database.
  </description>
  <author email="patrick@dfautomation.com">Patrick Chin</author>
  <maintainer email="patrick@dfautomation.com">Patrick Chin</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/dfautomation/dynamic_reconfigure_storage</url>
  <url type="bugtracker">https://github.com/dfautomation/dynamic_reconfigure_storage/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>dynamic_reconfigure_storage_utils</depend>
  <depend>libmysqlcppconn-dev</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-mysqldb</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-mysqldb</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-sqlalchemy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-sqlalchemy</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>roslint</test_depend>

  <export>
    <dynamic_reconfigure plugin="${prefix}/plugin.xml" />
    <dynamic_reconfigure plugin_py="dynamic_reconfigure_mysql_storage.MysqlStorage" />
  </export>
</package>
