<?xml version="1.0"?>
<package format="3">
  <name>dynamic_reconfigure_storage_utils</name>
  <version>0.1.4</version>
  <description>
    Common utility functions for storage backends.
  </description>
  <author email="patrick@dfautomation.com">Patrick Chin</author>
  <maintainer email="patrick@dfautomation.com">Patrick Chin</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/dfautomation/dynamic_reconfigure_storage</url>
  <url type="bugtracker">https://github.com/dfautomation/dynamic_reconfigure_storage/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>
  
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <test_depend>roslint</test_depend>
</package>
